--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header > p{
     margin: auto;
     text-align: center;
     color: white;
-    width: 400px;
+    max-width: 400px;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 10px;
